syntax = "proto3";

import "google/protobuf/empty.proto";

package greeter;

service Greeter {
  rpc Greetings(GreetingRequest) returns (GreetingResponse); // Renamed from "Greet" - incompatible change
  // rpc GetCount(google.protobuf.Empty) returns (CountResponse);
  // rpc GreetStream(GreetingRequest) returns (stream CountResponse);
}

message GreetingRequest {
  string person = 1;
}

message GreetingResponse {
  string greeting = 1;
}

message CountResponse {
  int32 greetings = 1;
}

service AnotherGreeter {
  rpc Greet(GreetingRequest) returns (GreetingResponse);
  rpc GetCount(google.protobuf.Empty) returns (CountResponse);
}